melior/src/dialect/snapshots/melior__dialect__index__tests__index.constant.snap
---
source: melior/src/dialect/index.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: index) -> index {
    %idx42 = index.constant 42
    return %idx42 : index
  }
}

